--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node app.js"
   },
   "author": "Shawn",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.13.3"
+  }
 }
